Moved stuff around
- old lab remove, new lab placed
- no more rotation at the start

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ ProjectName=ChemFoundations
 ProjectDisplayedTitle=
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-FullRebuild=False
+FullRebuild=True
 bCompressed=True
 UsePakFile=True
 IncludeCrashReporter=False
