Moved everything that needed to move to new lab

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ ProjectName=ChemFoundations
 ProjectDisplayedTitle=
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-FullRebuild=True
+FullRebuild=False
 bCompressed=True
 UsePakFile=True
 IncludeCrashReporter=False
