--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,7 +33,7 @@ TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=False
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
@@ -52,19 +52,6 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
-
-[/Script/Engine.UserInterfaceSettings]
-RenderFocusRule=NavigationOnly
-DefaultCursor=None
-TextEditBeamCursor=None
-CrosshairsCursor=None
-GrabHandCursor=None
-GrabHandClosedCursor=None
-SlashedCircleCursor=None
-ApplicationScale=1.000000
-UIScaleRule=ShortestSide
-CustomScalingRuleClass=None
-UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000))),ExternalCurve=None)
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.Discovr.Chem
@@ -96,4 +83,17 @@ GooglePlayLicenseKey=
 AndroidAudio=Default
 TargetSDKVersion=19
 bRemoveOSIG=True
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+DefaultCursor=None
+TextEditBeamCursor=None
+CrosshairsCursor=None
+GrabHandCursor=None
+GrabHandClosedCursor=None
+SlashedCircleCursor=None
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
